# BCISpeller_Thesis

./: Offline_Recording.py  Offline_Recording_FERC.py  Offline_Recording_HybridNew.py  Online_Recording.py  TRCA_model.sav  speller_config.py  speller_configFERC.py  speller_configHybridNew.py  test.py  testtttt.ipynb
eegmultithreads/eegmultithreads/: .pdm-python  pyproject.toml
eegmultithreads/eegmultithreads/src/: app.py  page.py  window.py
record_Sub/Test_1/: 0C.fif  0C.pickle
utils/: gui_FERC.py  gui_hybridNew.py  window.py
